--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "aa",
-    "description": "aa,
+    "description": "aa",
     "keywords": ["aa"],
     "env": {
          "PROTOCOL": {
